Replace Guava ImmutableList with standard List